<resources>
    <string name="app_name" translatable="false">PortableDoctor</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up2">Don\'t have an account? Sign up</string>
    <string name="all_fields">Please enter all the fields</string>
    <string name="incorrect">Incorrect email or password</string>
    <string name="not_available">Server not available</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="registration">Registration</string>
    <string name="name" >Name</string>
    <string name="surname" >Surname</string>
    <string name="yes" >Yes</string>
    <string name="no" >No</string>
    <string name="success">Registration successfully</string>
    <string name="already">Email already registered</string>
    <string name="survey">Survey</string>
    <string name="answer">Answer</string>
    <string name="range">INR range</string>
    <string name="tests">Consecutive tests stable INR</string>
    <string name="test">INR test</string>
    <string name="result">INR test result</string>
    <string name="date">Date</string>
    <string name="insert">Insert</string>
    <string name="error">Error</string>
    <string name="drug">Drug</string>
    <string name="new_drug">New drug</string>
    <string name="dose">Dose</string>
    <string name="hour">Time to take medicine</string>
    <string name="endDate">End of therapy</string>
    <string name="out_of_bounds" >Out of bounds</string>
    <string name="date_error">Date error</string>
    <string name="pathologies">Are you taking Warfarin?</string>
    <string name="no_reminders" >No reminders</string>
    <string name="take_medicine">Take the medicine</string>
    <string name="take_test">Take INR test</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
</resources>