<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title4"
        android:layout_width="328dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/name2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name2"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/name"
        android:background="@drawable/et_cust"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/surname2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title4" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/et_cust"
        android:drawableStart="@drawable/ic_envelope_solid"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/password2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname2" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/et_cust"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email2" />

    <EditText
        android:id="@+id/surname2"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:autofillHints="@string/surname"
        android:background="@drawable/et_cust"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/email2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name2" />

    <Button
        android:id="@+id/signup"
        android:layout_width="196dp"
        android:layout_height="89dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pathologies"
        app:layout_constraintTop_toBottomOf="@+id/password2">

        <RadioButton
            android:id="@+id/radioYes"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="5dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:padding="10dp"
            android:text="@string/yes"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/radioNo"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_margin="5dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:fontFamily="@font/poppins_medium"
            android:padding="10dp"
            android:text="@string/no"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />
    </RadioGroup>

    <TextView
        android:id="@+id/pathologies"
        android:layout_width="208dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/pathologies"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2" />

    <TextView
        android:id="@+id/error2"
        android:layout_width="253dp"
        android:layout_height="23dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textColor="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>