<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title4"
        android:layout_width="328dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/test"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/result"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="@string/result"
        android:background="@drawable/et_cust"
        android:drawableStart="@drawable/ic_poll_solid"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/result"
        android:inputType="numberDecimal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title4" />

    <EditText
        android:id="@+id/date"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/date"
        android:background="@drawable/et_cust"
        android:drawableStart="@drawable/ic_calendar_day_solid"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/date"
        android:inputType="date"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:selectAllOnFocus="true"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toTopOf="@+id/insert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/insert"
        android:layout_width="196dp"
        android:layout_height="89dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/insert"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/error4"
        android:layout_width="253dp"
        android:layout_height="23dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="58dp"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textColor="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/insert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>