<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/answer"
        android:layout_width="196dp"
        android:layout_height="89dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="144dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/answer"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error3" />

    <EditText
        android:id="@+id/tests"
        android:layout_width="374dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="90dp"
        android:autofillHints="@string/tests"
        android:background="@drawable/et_cust"
        android:drawableStart="@drawable/ic_poll_solid"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/tests"
        android:inputType="text|number"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.507" />

    <TextView
        android:id="@+id/range"
        android:layout_width="124dp"
        android:layout_height="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/range"
        android:textColor="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title4" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="147dp"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/range"
        app:layout_constraintTop_toBottomOf="@+id/title4">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:padding="10dp"
            android:checked="true"
            android:text="1.5 - 2"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="5dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/poppins_medium"
            android:padding="10dp"
            android:text="2 - 3"
            android:textAlignment="center"
            android:textColor="@drawable/text_color" />
    </RadioGroup>

    <TextView
        android:id="@+id/title4"
        android:layout_width="328dp"
        android:layout_height="63dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/survey"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error3"
        android:layout_width="253dp"
        android:layout_height="23dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:textColor="#F44336"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tests" />

</androidx.constraintlayout.widget.ConstraintLayout>